fix collapsed mobile navbar hover jittering; add css for right aligned navbar docs tab for #147
Former-commit-id: 019ce296ca562f41e07ace4434fce3591b6c32f2 [formerly ee42b0a5d7ee7ed68c069412df35524ac50682bd]
Former-commit-id: 337b8d5068fba276795c6b04d3c85e1f5190ed54
Former-commit-id: a7e5197d0c589da0bf1d2f42a6b350ed91e06261

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -238,12 +238,26 @@
 
 
 /* NAVBAR */
+
+/* allows for right-aligned tabs inside same ul tabset */
+/* only way I could get it working with shiny */
+ul.nav.navbar-nav {
+  float: none;
+}
+
 .navbar-default {
   background-color: white;
 }
 
 .navbar {
   margin-bottom: 50px;
+}
+
+/* same box when active/active so that hover doesn't change height on mobile */
+.navbar-nav>li>a {
+  padding: 5px 12px;
+  margin: 9px 2px;
+  border: 1px solid transparent;
 }
 
 .navbar-default .navbar-nav>.active>a,
